# faat.figpy

./: .gitignore  README.md  README.txt  pyproject.toml  setup.py
faat/figpy/: __init__.py
